working on the issue of the overlap of multiple events, still have to figure out which column each event should take

--- a/front/insaccess/src/css/App.css
+++ b/front/insaccess/src/css/App.css
@@ -88,7 +88,6 @@
   padding: 0.1rem 0.5rem;
   margin: 0 0.5rem;
   background: linear-gradient(180deg, #b0dbff, #ffb7ef);
-  width: 93%;
   position: absolute;
 }
 
